--- a/MODx1/A07/index.html
+++ b/MODx1/A07/index.html
@@ -22,7 +22,7 @@
 
   <h2>Reproduzindo audios</h2>
   <p>
-    Vamos aprender a reproduzir audios dentro do nosso site, CARALHO.
+    Vamos aprender a reproduzir audios dentro do nosso site.
   </p>
 
   <!-- 
@@ -35,10 +35,21 @@
     <source src="midia/christmas.mp3" type="audio/mpeg">
     <source src="midia/helium-tracktribe.mp3" type="audio/mpeg">
     <p>
-      Infelizmente seu navegador não consegue reproduzir o CARALHO.<br>
+      Infelizmente seu navegador não consegue reproduzir o audio.<br>
       <a href="midia/helium-tracktribe.mp3">Clique aqui para baixar o audio</a>
     </p>
   </audio>
-  
+
+  <h1>Inserindo vídeos hospedados localmente</h1>
+  <p>Este vídeo está hospedado no meu próprio servidor.</p>
+
+  <video width="560" poster="midia/imagens/papagaio-poster.jpg" controls autoplay loop>
+    <source src="midia/video/papagaio.mp4" type="video/mp4">
+    <p>Seu navegador não tem compatibilidade com esse tipo de arquivo.</p>
+  </video>
+
+  <h1>Inserindo videos do youtube</h1>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ZHhqwBwmRkI?si=4tweHeZ8DzFTu2jG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </body>
 </html>
